# cloud_uploader_service

./: .gitignore  README.md  pyproject.toml
fake_cloud_service_client/: __init__.py  client.py
src/cloud_uploader_service/: base_exception.py  bootstrap.py  bootstrap_external_services.py  settings.py
src/cloud_uploader_service/adapter/: __init__.py  adapter.py  exceptions.py
src/cloud_uploader_service/api/: run.py
src/cloud_uploader_service/domain/: __init__.py  abstractions.py  exceptions.py  model.py  use_cases.py
src/cloud_uploader_service/gateway/: __init__.py  application.py  handlers.py  schemas.py
src/cloud_uploader_service/service_layer/: __init__.py  command.py  handler.py  unit_of_work.py
src/cloud_uploader_service/storage/: __init__.py  exceptions.py  redis_service.py  repository.py
tests/end_to_end/: conftest.py  test_service.py
tests/integration/: test_redis_service.py  test_repository.py
tests/unit/: test_model.py  test_use_cases.py
